force-app/main/default/objects/Deal_Desk_Comments__c/Deal_Desk_Comments__c.object-meta.xml
<CustomObject>
    <description>SOX object - Custom Object</description>
    <label>Deal Desk Comments</label>
    <nameField>
        <displayFormat>Comment-{0000000}</displayFormat>
        <label>Deal Desk Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Desk Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>