force-app/main/default/objects/Deal_Desk_Comments__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>