force-app/main/default/objects/Deal_Desk_Comments__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentId</label>
    <referenceTo>Deal_Desk_Case__c</referenceTo>
    <relationshipLabel>Deal Desk Comments</relationshipLabel>
    <relationshipName>Deal_Desk_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>