force-app/main/default/objects/Deal_Desk_Comments__c/fields/Recipient_Ids__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Ids__c</fullName>
    <label>Recipient Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>