force-app/main/default/objects/Deal_Desk_Comments__c/fields/Recipient_Names__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Names__c</fullName>
    <label>Recipient Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>